--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macaroons</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -132,8 +134,10 @@
                 <div class="macaroon__content">
                     <div class="macaroon__title">Макарун с малиной</div>
                     <div class="macaroon__order-block">
-                        <div class="macaroon__count">1 шт.</div>
-                        <div class="macaroon__price">1,70 руб.</div>
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
                         <div class="btn macaroon__order hvr-bob">Заказать</div>
                     </div>
                 </div>
@@ -145,8 +149,10 @@
                 <div class="macaroon__content">
                     <div class="macaroon__title">Макарун с манго</div>
                     <div class="macaroon__order-block">
-                        <div class="macaroon__count">1 шт.</div>
-                        <div class="macaroon__price">1,70 руб.</div>
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
                         <div class="btn macaroon__order hvr-bob">Заказать</div>
                     </div>
                 </div>
@@ -158,8 +164,10 @@
                 <div class="macaroon__content">
                     <div class="macaroon__title">Пирог с ванилью</div>
                     <div class="macaroon__order-block">
-                        <div class="macaroon__count">1 шт.</div>
-                        <div class="macaroon__price">1,70 руб.</div>
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
                         <div class="btn macaroon__order hvr-bob">Заказать</div>
                     </div>
                 </div>
@@ -171,8 +179,70 @@
                 <div class="macaroon__content">
                     <div class="macaroon__title">Пирог с фисташками</div>
                     <div class="macaroon__order-block">
-                        <div class="macaroon__count">1 шт.</div>
-                        <div class="macaroon__price">1,70 руб.</div>
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
+                        <div class="btn macaroon__order hvr-bob">Заказать</div>
+                    </div>
+                </div>
+            </div>
+            <div class="macaroon">
+                <a class="macaroon__image" href="images/5.png">
+                    <img src="images/5.png" alt="Fourth Macaroon Image" class="macaroon__image-img">
+                </a>
+                <div class="macaroon__content">
+                    <div class="macaroon__title">Пирог с пломбиром</div>
+                    <div class="macaroon__order-block">
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
+                        <div class="btn macaroon__order hvr-bob">Заказать</div>
+                    </div>
+                </div>
+            </div>
+            <div class="macaroon">
+                <a class="macaroon__image" href="images/6.png">
+                    <img src="images/6.png" alt="Fourth Macaroon Image" class="macaroon__image-img">
+                </a>
+                <div class="macaroon__content">
+                    <div class="macaroon__title">Пирог с малиной</div>
+                    <div class="macaroon__order-block">
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
+                        <div class="btn macaroon__order hvr-bob">Заказать</div>
+                    </div>
+                </div>
+            </div>
+            <div class="macaroon">
+                <a class="macaroon__image" href="images/7.png">
+                    <img src="images/7.png" alt="Fourth Macaroon Image" class="macaroon__image-img">
+                </a>
+                <div class="macaroon__content">
+                    <div class="macaroon__title">Пирог со смородиной</div>
+                    <div class="macaroon__order-block">
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
+                        <div class="btn macaroon__order hvr-bob">Заказать</div>
+                    </div>
+                </div>
+            </div>
+            <div class="macaroon">
+                <a class="macaroon__image" href="images/8.png">
+                    <img src="images/8.png" alt="Fourth Macaroon Image" class="macaroon__image-img">
+                </a>
+                <div class="macaroon__content">
+                    <div class="macaroon__title">Пирог с шоколадом</div>
+                    <div class="macaroon__order-block">
+                        <div class="macaroon__text-block">
+                            <div class="macaroon__count">1 шт.</div>
+                            <div class="macaroon__price">1,70 руб.</div>
+                        </div>
                         <div class="btn macaroon__order hvr-bob">Заказать</div>
                     </div>
                 </div>
@@ -254,7 +324,9 @@
 <div class="loader">
     <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
+
 <script src="js/jquery-3.7.1.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/script.js">
