--- a/index.html
+++ b/index.html
@@ -261,25 +261,26 @@
         <div class="order__image wow animate__slideInLeft">
             <img src="images/macaron.png" alt="Macaron" class="order__image-img">
         </div>
-        <div class="order__info wow animate__slideInRight">
-            <div class="order__title">Закажите макарун!</div>
-            <div class="order__subtitle">Выберите понравившийся макарун, заполните форму и ожидайте звонка нашего
-                пекаря!
+            <div class="success-message">Спасибо за Ваш заказ. Мы скоро свяжемся с Вами!</div>
+            <div class="order__info wow animate__slideInRight">
+                <div class="order__title">Закажите макарун!</div>
+                <div class="order__subtitle">Выберите понравившийся макарун, заполните форму и ожидайте звонка нашего
+                    пекаря!
+                </div>
+                <div class="order__information">
+                    <div class="order__information-text">Ваш выбор</div>
+                    <input type="text" class="base-input order__base-input" placeholder="Напишите, что хотите заказать..." id="order-text">
+                    <div class="error-input">Необходимо ввести заказ</div>
+                </div>
+                <div class="order__place">
+                    <div class="order__place-text">Заполните данные для заказа</div>
+                    <input type="text" class="base-input order__base-input" placeholder="Ваше имя" id="name">
+                    <div class="error-input">Необходимо ввести ваше имя</div>
+                    <input type="text" class="base-input order__base-input" placeholder="+375 (__) ___ - __ - __" id="phone">
+                    <div class="error-input">Необходимо ввести ваш номер телефона</div>
+                    <div class="btn order__place-order hvr-grow" id="submit">Оформить заказ</div>
+                </div>
             </div>
-            <div class="order__information">
-                <div class="order__information-text">Ваш выбор</div>
-                <input type="text" class="base-input order__base-input" placeholder="Напишите, что хотите заказать..." id="order-text">
-                <div class="error-input">Необходимо ввести заказ</div>
-            </div>
-            <div class="order__place">
-                <div class="order__place-text">Заполните данные для заказа</div>
-                <input type="text" class="base-input order__base-input" placeholder="Ваше имя" id="name">
-                <div class="error-input">Необходимо ввести ваше имя</div>
-                <input type="text" class="base-input order__base-input" placeholder="+375 (__) ___ - __ - __" id="phone">
-                <div class="error-input">Необходимо ввести ваш номер телефона</div>
-                <div class="btn order__place-order hvr-grow" id="submit">Оформить заказ</div>
-            </div>
-        </div>
     </div>
 </section>
 <section class="footer">
